--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,16 @@
   <link rel="icon"
     type="image/x-icon"
     href="favicon.ico">
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async
+    src="https://www.googletagmanager.com/gtag/js?id=UA-145096107-1"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+
+    gtag('config', 'UA-145096107-1');
+  </script>
 </head>
 
 <body>
