--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
     content="width=device-width, initial-scale=1">
   <link rel="icon"
     type="image/x-icon"
-    href="favicon.ico">
+    href="./assets/img/favicon.ico">
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async
     src="https://www.googletagmanager.com/gtag/js?id=UA-145096107-1"></script>
