--- a/src/index.html
+++ b/src/index.html
@@ -3,18 +3,13 @@
 
 <head>
   <meta charset="utf-8">
-  <meta name="author"
-    content="AXeL-dev">
+  <meta name="author" content="AXeL-dev">
   <title>Portfolio</title>
   <base href="/">
-  <meta name="viewport"
-    content="width=device-width, initial-scale=1">
-  <link rel="icon"
-    type="image/x-icon"
-    href="./assets/img/favicon.ico">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="icon" type="image/x-icon" href="./assets/img/favicon.ico">
   <!-- Global site tag (gtag.js) - Google Analytics -->
-  <script async
-    src="https://www.googletagmanager.com/gtag/js?id=UA-145096107-1"></script>
+  <script src="https://www.googletagmanager.com/gtag/js?id=UA-145096107-1" async></script>
   <script>
     window.dataLayer = window.dataLayer || [];
     function gtag() { dataLayer.push(arguments); }
