chore: new blog post
Topic: Material-UI 5

--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,8 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="./assets/img/favicon.ico">
+  <!-- Twitter widgets -->
+  <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script> 
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script src="https://www.googletagmanager.com/gtag/js?id=UA-145096107-1" async></script>
   <script>
