--- a/src/index.html
+++ b/src/index.html
@@ -21,7 +21,7 @@
   </script>
 </head>
 
-<body>
+<body data-prismjs-copy-timeout="3000">
   <app-root>
     <!-- Preloader -->
     <div class="preloader">
